--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "forest-walker",
+  "name": "webpack-boiler",
   "version": "1.0.0",
   "author": "William Dunlop",
   "description": "",
