--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "forest-walker",
+  "name": "webpack-boilerplate",
   "version": "1.0.0",
   "author": "William Dunlop",
   "description": "",
@@ -8,7 +8,7 @@
     "@tweenjs/tween.js": "^17.2.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.0",
-    "node-sass": "^4.9.2",
+    "node-sass": "^4.11.0",
     "npm-run-all": "^4.1.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
@@ -16,13 +16,13 @@
     "style-loader": "^0.21.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.3"
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.0"
   },
   "scripts": {
     "build": "npm run build-js && npm run build-css && cp -r ./src/_static/* ./build/",
